--- a/docs/_posts/exercises/2017-09-15-chapter-14.md
+++ b/docs/_posts/exercises/2017-09-15-chapter-14.md
@@ -1,12 +1,12 @@
 ---
 layout: exercise
-title: "Chapter 1 Exercises"
+title: "Chapter 14 Exercises"
 excerpt: ""
 categories: exercises
-tags: [chapter-1]
+tags: [chapter-14]
 author: simon_farrell
 comments: false
 share: false
 ---
 
-_Exercises for this chapter will appear shortly_
+[Exercises to appear]
