correction to maths and answers link

--- a/docs/_posts/exercises/2018-05-03-chapter-4.md
+++ b/docs/_posts/exercises/2018-05-03-chapter-4.md
@@ -11,6 +11,6 @@ share: false
 
 ## Exercise 4.1
 
-Generate some data from the Wald distribution with known parameter values $m=2$, $a=2.5$, $T=0.5$, and fit the Wald back to the generated data using maximum likelihood estimation. For large $N$, you should find a close agreement between the ML parameter estimates and the true values.
+Generate some data from the Wald distribution with known parameter values $$m=2$$, $$a=2.5$$, $$T=0.5$$, and fit the Wald back to the generated data using maximum likelihood estimation. For large $$N$$, you should find a close agreement between the ML parameter estimates and the true values.
 
-To generate data from the Wald distribution, note that the Wald distribution is directly related to the inverse Gaussian distribution. Specifically, data from the Wald with parameters $m$ (drift) and $a$ (boundary) are distributed as $IG(a/m,a^2)$. A number of packages are provided on CRAN to simulate from the inverse gaussian; we used the rinvgauss function in the library `statmod`.
+To generate data from the Wald distribution, note that the Wald distribution is directly related to the inverse Gaussian distribution. Specifically, data from the Wald with parameters $$m$$ (drift) and $$a$$ (boundary) are distributed as $$IG(a/m,a^2)$$. A number of packages are provided on CRAN to simulate from the inverse gaussian; we used the rinvgauss function in the library `statmod`.
